final work done

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main class="wrapper">
         <section class="left-section">
             <div class="banner">
-                <img src="/images/odin-lined.png" alt="The Odin Project Logo">
+                <img src="./images/odin-lined.png" alt="The Odin Project Logo">
                 <span class="logo-text">odin</span>
             </div>
         </section>
