Images now display

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
                 <img src="./images/odin-lined.png" alt="The Odin Project Logo">
                 <span class="logo-text">odin</span>
             </div>
+            <p>Photo by 
+                <a href="https://unsplash.com/photos/green-leaf-plant-in-close-up-photography-25xggax4bSA" target="_blank" rel="noopener noreferrer">Halie West</a>
+            </p>
         </section>
         <div>
             <section class="right-section right-section-container">
