--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <main class="wrapper">
         <section class="left-section">
             <div class="banner">
-                <img src="./images/odin-lined.png" alt="The Odin Project Logo">
+                <img src="images/odin-lined.png" alt="The Odin Project Logo" width="80px" height="100px">
                 <span class="logo-text">odin</span>
             </div>
-            <p>Photo by 
-                <a href="https://unsplash.com/photos/green-leaf-plant-in-close-up-photography-25xggax4bSA" target="_blank" rel="noopener noreferrer">Halie West</a>
+            <p class="backgorund-image-credit">Photo by 
+                <a href="https://unsplash.com/photos/green-leaf-plant-in-close-up-photography-25xggax4bSA" target="_blank" rel="noopener noreferrer">Halie West</a> on <a href="https://unsplash.com">Unsplash</a>
             </p>
         </section>
         <div>
